@@ -1,6 +1,5 @@
 package com.in28minutes.springboot.basics.springbootin10steps;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.web.bind.annotation.GetMapping;
@@ -8,9 +7,8 @@ import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 public class BooksController {
-	@GetMapping("/books")
-	public List<Book> getAllBooks() {
-		return Arrays.asList(
-				new Book(1l, "Mastering Spring 5.2", "Ranga Karanam"));
-	}
+    @GetMapping("/books")
+    public List<Book> getAllBooks() {
+        return List.of(new Book(1L, "Mastering Spring 5.2", "Ranga Karanam"));
+    }
 }
